#ifndef ENUMS_H
#define ENUMS_H

enum CellContent {
    empty,
    body,
    Nfood,
    Sfood,
    dropped
};

enum class Direction {
    UP,
    DOWN,
    RIGHT,
    LEFT
};

#endif // ENUMS_H
