#ifndef MAINWINDOW_H
#define MAINWINDOW_H

#include "settingmenu.h"
#include <QMainWindow>
#include <QSoundEffect>

QT_BEGIN_NAMESPACE
namespace Ui { class MainWindow; }
QT_END_NAMESPACE

class MainWindow : public QMainWindow
{
    Q_OBJECT

public:
    explicit MainWindow(QWidget *parent = nullptr);
    ~MainWindow() override;

    SettingMenu *settingmenu = nullptr;

private slots:
    void on_Start_clicked();
    void on_Settings_clicked();
    void on_Exit_clicked();

private:
    Ui::MainWindow *ui;
};

#endif // MAINWINDOW_H
