#ifndef START_H
#define START_H

#include <QWidget>
#include <QLabel>
#include <QPushButton>
#include <QKeyEvent>
#include "gamewidget.h"

namespace Ui { class start; }

class start : public QWidget
{
    Q_OBJECT

public:
    explicit start(int rows, int cols, int difficulty, int volume, bool dropTiles, QWidget *parent = nullptr);
    ~start();

protected:
    void keyPressEvent(QKeyEvent *event) override;

private slots:
    void onScoreChanged(int score);
    void onGameOver(int score);
    void onRestart();
    void onBackToMenu();

private:
    Ui::start   *ui;
    GameWidget  *game;
    QLabel      *scoreLabel;
    QLabel      *gameOverLabel;
    QPushButton *restartBtn;
    QPushButton *menuBtn;
    bool m_dropTiles;

    int m_rows, m_cols, m_difficulty, m_volume;

    void spawnGame();
};

#endif // START_H
